--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -14,7 +14,7 @@ repos:
         entry: flake8
         language: system
         types: [ python ]
-        args: [ "--max-line-length=88", "--ignore=E203" ]
+        args: [ "--max-line-length=88", "--ignore=E203, W503" ]
 
       # isort for python files
       - id: isort
