--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,18 +1,14 @@
 [tool.poetry]
 name = "WAF_ML"
-version = "0.1.0"
-description = "A short description of the project"
+version = "0.3.0"
+description = "Web Application Firewall with ML analitycs module"
 authors = ["Aleksej Zhurin <2010zalex@gmail.com>"]
 packages = [{ include = "src"}]
 
 [tool.poetry.dependencies]
 python = "3.10.12"
-requests = "*"
-pandas = "~1.2"
-scikit-learn = "~1.1.1"
 joblib = "*"
 tqdm = "*"
-tabulate = "*"
 rich = "^10.4.0"
 
 [tool.poetry.group.dev.dependencies]
@@ -21,17 +17,26 @@ pre-commit = "*"
 isort = "^5.12.0"
 flake8 = "^3.9.0"
 jupyter = "*"
-matplotlib = "*"
-seaborn = "*"
 mypy = "^0.960"
 nbqa = "^0.5.9"
 autoflake = "*"
 pydocstyle = "^6.1.1"
 mlflow = "^2.5.0"
 
-[tool.poetry.scripts]
-train = "src.models.train:main"
-predict = "src.models.predict:main"
+[tool.poetry.group.research.dependencies]
+matplotlib = "*"
+seaborn = "*"
+pandas = "~2.2"
+scikit-learn = "~1.4.2"
+
+[tool.nbqa.mutate]
+black = 1
+autoflake = 1
+isort = 1
+
+[tool.isort]
+profile = "black"
+multi_line_output = 3
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
